-fixed issue with font -changed font -added placeholder elements to nav bar -adjusted navbar adding h1 tag and place holder image -adjusted nav element spacing -added place holder items for projects section --next steps -add rounded edges, and borders -give project place holder items for definition -adjust project and about be div styles style -add media tags

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 /*color pallet and font pref. */
-root {
+
+:root {
   --black: #171321;
   --plum: #99537d;
   --teal: #5a9599;
@@ -8,19 +9,64 @@ root {
   --tan: #e6ddaa;
   --white: #f7f8fa;
   --font-size: 1.3rem;
-  --mono: "Oxygen mono", monospace;
-  --sans: Oxygen, sans-serif;
+  --sans: "Oswald", sans-serif;
 }
 
 body {
-  background-color: var(plum);
+  padding: 0;
+  margin: 0;
+  font-family: "Oswald", sans-serif;
+  color: var(--plum);
+  font-size: var(--font-size);
+  background: var(--black);
 }
 
-p {
+#header-img {
+  float: left;
+  padding-bottom: 5px;
+  padding-top: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+  display: inline;
+  width: 3%;
 }
 
-nav {
+#nav-bar {
+  font-size: 20px;
+  background: var(--tan);
+  display: flex;
+  flex-direction: row;
+}
+ul {
+  display: flex;
+  flex-grow: 3;
+  justify-content: space-around;
+  list-style: none;
+  padding-top: 20px;
 }
 .button {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.container {
+  padding-left: 10px;
+  padding-right: 10px;
+  font-family: var(--sans);
+  color: rgb(10, 1, 1);
+  font-size: var(--font-size);
+}
+
+.projects {
+  background: var(--plum);
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.project_item {
+  flex: 1 0 20%;
+  margin: 5px;
+}
+
+article {
+  background: var(--plum);
 }
